--- a/newdamage1.html
+++ b/newdamage1.html
@@ -340,14 +340,20 @@
       -webkit-mask-repeat: no-repeat;
       -webkit-mask-position: center;
     }
-    .enemy-overlay {
+ .enemy-overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('overlay3.gif') center/cover no-repeat;
+  background: url('overlay5.gif') center/cover no-repeat;
   pointer-events: none;
+  mask-image: url('mask.png');
+  mask-size: cover;
+  mask-repeat: no-repeat;
+  -webkit-mask-image: url('mask.png');
+  -webkit-mask-size: cover;
+  -webkit-mask-repeat: no-repeat;
 }
   </style>
 </head>
