--- a/newdamage1.html
+++ b/newdamage1.html
@@ -342,7 +342,7 @@
     }
  .enemy-overlay {
   position: absolute;
-
+border-radius: 50%;
   background: url('overlay4.gif') center/cover no-repeat;
   pointer-events: none;
  
