--- a/newdamage1.html
+++ b/newdamage1.html
@@ -342,10 +342,13 @@
     }
  .enemy-overlay {
   position: absolute;
-border-radius: 50%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   background: url('overlay4.gif') center/cover no-repeat;
   pointer-events: none;
- 
 }
   </style>
 </head>
