--- a/newdamage1.html
+++ b/newdamage1.html
@@ -224,7 +224,7 @@
     .head .eye.left { left: 30%; top: 30%; }
     .head .eye.right { right: 30%; top: 30%; }
     .enemy {
-      background: red;
+      background: black;
       border: 2px solid black;
       border-radius: 50%;
     }
