--- a/alphatest.html
+++ b/alphatest.html
@@ -46,7 +46,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('IMG_7196.png') repeat-x;
+      background: url('background.png') repeat-x;
       background-size: auto 100%;
       z-index: 0;
     }
