--- a/alphatest.html
+++ b/alphatest.html
@@ -69,7 +69,7 @@
       right: 0;
       bottom: 25px;
       z-index: 10;
-      display: flex;
+      display: none;
       justify-content: center;
       align-items: center;
     }
